fix spacing issue.

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -70,13 +70,7 @@ body.toastr-confirm-active {
       font-family: Arial, Helvetica, sans-serif, sans-serif;
       font-size: 1em;
       text-align: left;
-      padding: 20px 20px 20px 60px;
-
-      p {
-        padding: 5px;
-        margin: 0;
-      }
-
+      
       .title {
         font-size: 1.1em;
         font-weight: bold;
@@ -85,6 +79,7 @@ body.toastr-confirm-active {
 
     &.info, &.success, &.warning, &.error {
       color: white;
+      padding: 20px 20px 20px 60px;
     }
 
     &.info {
@@ -120,20 +115,21 @@ body.toastr-confirm-active {
           text-overflow: ellipsis;
           overflow: hidden;
           white-space: nowrap;
-          line-height: 45px;
+          line-height: 50px;
           padding: 0 15px;
         }
 
         .message {
-          border-radius: 5px;
           width: 100%;
           max-height: 400px;
           overflow: hidden;
           overflow-y: auto;
           border-top: 1px solid #f1f1f1;
+          border-bottom: 1px solid #f1f1f1;
           background-color: white;
           padding: 15px;
           font-size: 1.1em;
+          margin-bottom: 20px;
 
           img {
             display: block;
